# nmode_prod_cheb

./: CMakeLists.txt  README.md
src/: chebval.f90  chebval.mod  sop_fbr.f90  tensor_nmode.f90  tensor_nmode.mod
